# sam3-cpu

./: .dockerignore  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  config.json  docker-compose.yml  image_prompter.py  main.py  pyproject.toml  setup.sh  video_prompter.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  version_release.yml
sam3/: __globals.py  __init__.py  api.py  async_io.py  chunk_processor.py  drivers.py  entry.py  entrypoint.py  ffmpeglib.py  image_processor.py  logger.py  memory_manager.py  memory_optimizer.py  memory_predictor.py  model_builder.py  postprocessor.py  profiler.py  streaming_masks.py  system_info.py  video_processor.py  visualization_utils.py  wrapper.py
sam3/agent/: agent_core.py  client_sam3.py
sam3/agent/helpers/: rotated_boxes.py
sam3/eval/: cgf1_eval.py  coco_eval.py  coco_eval_offline.py  coco_reindex.py  coco_writer.py  demo_eval.py  postprocessors.py  saco_veval_eval.py  saco_veval_evaluators.py  ytvis_coco_wrapper.py  ytvis_eval.py
sam3/model/: edt.py  sam3_video_base.py  sam3_video_inference.py  sam3_video_predictor.py  sam3_video_predictor_v2.py
sam3/train/loss/: sigmoid_focal_loss.py
sam3/utils/: __init__.py  ffmpeglib.py  helpers.py  profiler.py  system_info.py  visualization.py
tests/: conftest.py  test_all_scenarios.py  test_chunks_injection.py  test_cross_chunk.py  test_intra_chunk_monitor.py  test_postprocessor_isolated.py  test_video_prompter.py
