[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3-cpu"
dynamic = ["version"]
description = "SAM3 (Segment Anything Model 3) implementation with added CPU compatibility, while maintaining existing CUDA support."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  { name = "Dr Prashant Aparajeya", email = "p.aparajeya@gmail.com" },
  { name = "Dr Ankuj Arora", email = "ankujarora@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.10.8",
    "setuptools",
    "torch",
    "torchvision",
    "numpy",
    "pillow",
    "huggingface-hub",
    "iopath",
    "einops>=0.8.2",
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
    "decord>=0.6.0",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "timm>=1.0.24",
    "tqdm>=4.67.3",
    "ftfy>=6.3.1",
    "regex>=2026.1.15",
    "typing-extensions>=4.15.0",
    "pycocotools>=2.0.11",
    "pandas>=3.0.0",
]


[project.urls]
"Homepage" = "https://github.com/rhubarb-ai/sam3-cpu"

[tool.setuptools.packages.find]
include = ["sam3*"]
exclude = ["build*", "scripts*", "notebook*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".venv",
    "build",
    "dist",
    "notebook",
    "sam3/model",          # upstream model code — don't lint
    "sam3/sam",            # upstream SAM code
    "sam3/train",          # training code
    "sam3/eval/hota_eval_toolkit",
    "sam3/eval/teta_eval_toolkit",
]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "UP",      # pyupgrade
    "S",       # flake8-bandit (security)
]
ignore = [
    "E501",    # line too long — handled by formatter
    "S101",    # assert used — fine in tests
    "S603",    # subprocess without shell=True check — we control inputs
    "S607",    # partial executable path — acceptable
    "B008",    # function call in default arg — used by argparse
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
